# Xodor

./: .gitignore  AI_CHAT_BUBBLE_FIX.md  AI_CHAT_BUBBLE_NO_SCROLLBAR_FIX.md  AI_CHAT_BUBBLE_TEXT_WRAP_FIX.md  AI_CHAT_BUBBLE_ZOOM_AND_WRAP_FINAL_FIX.md  AI_CHAT_LISTVIEW_IMPLEMENTATION.md  AI_CHAT_UI_IMPROVEMENTS.md  AI_CHAT_UI_REDESIGN.md  AI_CHECK_QUICK_GUIDE.md  AI_CLOUD_API_VERIFICATION.md  AI_CONFIG_SYNC_FIX.md  AI_CONNECTION_CHECK_FEATURE.md  AI_CONNECTION_CHECK_FIX.md  AI_DRIVEN_IMPORT_SYSTEM.md  AI_IMPORT_COMPLETE_WORKFLOW.md  AI_IMPORT_FEATURE.md  AI_IMPORT_SIMPLIFICATION.md  AI_IMPORT_TEST_GUIDE.md  AI_JUDGE_FEATURE_DESIGN.md  AI_JUDGE_IMPLEMENTATION_COMPLETE.md  AI_JUDGE_PROGRESS_DIALOG_STYLE.md  AI_JUDGE_STATUS_DISPLAY.md  AI_MODEL_DETECTION_FIX.md  AI_MODEL_SELECTION_IMPROVEMENT.md  AI_MODEL_SELECTION_SUMMARY.md  AI_MODE_SWITCH_REFACTOR.md  AI_PANEL_CLEANUP.md  AI_TUTOR_CHAT_SYSTEM.md  AI_TUTOR_COMPLETE.md  AI_TUTOR_IMPLEMENTATION_SUMMARY.md  AI_TUTOR_SCROLL_AND_COMPLETION_FIX.md  AI判题和UI优化完成.md  AI判题回复隐藏修复完成.md  AI判题崩溃修复完成.md  AI判题状态同步修复完成.md  AI判题逻辑和UI优化.md  AI对话Markdown优化完成.md  AI对话优化完成.md  AI对话历史题目过滤修复.md  AI导入MD拆分实施进度.md  (+271 more)
.cache/clangd/index/: AIAnalysisPanel.cpp.374D4E58363C13BA.idx  AIAnalysisPanel.h.23A542D7B8FD6FD5.idx  AIAssistant.cpp.FA62D2D8154DCB9D.idx  AIAssistant.h.8F8D8C90B0D28873.idx  AIAssistantPanel.cpp.D2B8D72987AA19EE.idx  AIAssistantPanel.h.AC982A1021538724.idx  AIConnectionChecker.cpp.558627A13770ED0B.idx  AIConnectionChecker.h.5A4DFCF33BF845A0.idx  AIImportDialog.cpp.06C5B2BEE552832D.idx  AIImportDialog.h.65480605E997A9E6.idx  AIJudge.cpp.20750985E22A355E.idx  AIJudge.h.29EFD4C049C48484.idx  AIService.cpp.AC8A57175D505991.idx  AIService.h.6AF759BF2F5B4469.idx  AutoSaveManager.cpp.B77393B6E180C7FD.idx  AutoSaveManager.h.CF3E0A067DB3D336.idx  AutoSaver.cpp.BB486604E5BAA15A.idx  AutoSaver.h.B00D8E2A45E35404.idx  BatchTestCaseFixerDialog.cpp.DD1D9C4A01CB8A07.idx  BatchTestCaseFixerDialog.h.2A6BC39D28D99C90.idx  ChatBubbleDelegate.cpp.D56FDC633D89E4D6.idx  ChatBubbleDelegate.h.702F25E5B8CC6F45.idx  ChatBubbleWidget.cpp.A6425692455F8BF6.idx  ChatBubbleWidget.h.A387D5B0321F96CB.idx  ChatHistoryDialog.cpp.47420DBBC04B644D.idx  ChatHistoryDialog.h.3E15897D4A2DB3C9.idx  CloudAIClient.cpp.62E401B702CEE5FA.idx  CloudAIClient.h.336F1A65F718FC51.idx  CodeEditor.cpp.9C01E7A0724837B1.idx  CodeEditor.h.19A8628AE22541E4.idx  CodeTemplateManager.cpp.8CF22FCD4E37C8D5.idx  CodeTemplateManager.h.0C1B1FB237CD4B80.idx  CodeVersionDialog.cpp.0CC5EA7F612C1657.idx  CodeVersionDialog.h.9E27CEC669327D68.idx  CodeVersionManager.cpp.E1F3CCC5EAC85E8E.idx  CodeVersionManager.h.34AC64D5507ADEDB.idx  CompilerDetector.cpp.1F3A31F56FDA9F74.idx  CompilerDetector.h.A17305F892160D79.idx  CompilerRunner.cpp.4057915B42590B4D.idx  CompilerRunner.h.AF1E4B3AB9571B97.idx  (+83 more)
.kiro/specs/ai-import-improvements/: design.md  requirements.md  tasks.md
cmake/: copy_data_if_needed.cmake
data/: README.md  config.json  last_session.json
data/backup_20251206_151401/基础题库_CCF/31/: 坐标变换（其二）.json  梯度求解.json  阻击.json
data/backup_20251206_151401/基础题库_CCF/32/: 彩色路径.json  树上搜索.json
data/backup_20251206_151401/基础题库_CCF/33/: 化学方程式配平.json  十滴水.json  词频统计.json
data/backup_20251206_151401/基础题库_CCF/34/: 哥德尔机.json  (+1 more)
data/config/: CCF_parse_rule.json
data/sample_questions/: 01_两数之和.md  03_斐波那契数列.md
data/原始题库/CCF/: 32.md  33.md  35.md  36.md
data/基础题库/CCF/: 出题模式规律.md
deploy/: QUICK_START.md  README.md
deploy/data/: config.json  last_session.json
deploy/data/sample_questions/: 02_反转字符串.md
deploy/data/user_answers/: q_16733555202665192015.json
src/: main.cpp
src/ai/: AIAssistant.cpp  AIAssistant.h  AIJudge.cpp  AIJudge.h  AIQuestionBankImporter.cpp  AIQuestionBankImporter.h  AIService.cpp  AIService.h  CloudAIClient.cpp  CloudAIClient.h  FineTuneManager.cpp  FineTuneManager.h  MockExamGenerator.cpp  MockExamGenerator.h  OllamaClient.cpp  OllamaClient.h  QuestionBankAnalyzer.cpp  QuestionBankAnalyzer.h  QuestionParser.cpp  QuestionParser.h  SmartQuestionImporter.cpp  SmartQuestionImporter.h  TestCaseFixer.cpp  TestCaseFixer.h  TestDataGenerator.cpp  TestDataGenerator.h  UniversalQuestionParser.cpp  UniversalQuestionParser.h
src/core/: AutoSaver.cpp  AutoSaver.h  CodeVersionManager.cpp  CodeVersionManager.h  CompilerRunner.cpp  CompilerRunner.h  ExamReportGenerator.cpp  ExamReportGenerator.h  ExamSession.cpp  ExamSession.h  MarkdownQuestionParser.cpp  MarkdownQuestionParser.h  ProgressManager.cpp  ProgressManager.h  Question.cpp  Question.h  QuestionBank.cpp  QuestionBank.h  QuestionBankManager.cpp  QuestionBankManager.h  QuestionProgress.cpp  QuestionProgress.h  WrongQuestionBook.cpp  WrongQuestionBook.h
src/ui/: AIAnalysisPanel.cpp  AIAnalysisPanel.h  AIAssistantPanel.cpp  AIAssistantPanel.h  AIImportDialog.cpp  AIImportDialog.h  AIImportDialog_New.h  AIJudgeProgressDialog.cpp  AIJudgeProgressDialog.h  BatchTestCaseFixerDialog.cpp  BatchTestCaseFixerDialog.h  ChatBubbleDelegate.cpp  ChatBubbleDelegate.h  ChatBubbleWidget.cpp  ChatBubbleWidget.h  ChatHistoryDialog.cpp  ChatHistoryDialog.h  CodeEditor.cpp  CodeEditor.h  CodeVersionDialog.cpp  CodeVersionDialog.h  EnhancedCodeEditor.h  ErrorListWidget.cpp  ErrorListWidget.h  ExamGeneratorDialog.cpp  ExamGeneratorDialog.h  ExamReportDialog.cpp  ExamReportDialog.h  HistoryWidget.cpp  HistoryWidget.h  ImportDialog.cpp  ImportDialog.h  MainWindow.cpp  MainWindow.h  MockExamManagerDialog.cpp  MockExamManagerDialog.h  ModernTheme.cpp  ModernTheme.h  OriginalQuestionDialog.cpp  OriginalQuestionDialog.h  (+29 more)
src/utils/: AIConnectionChecker.cpp  AIConnectionChecker.h  AutoSaveManager.cpp  AutoSaveManager.h  CodeTemplateManager.cpp  CodeTemplateManager.h  CompilerDetector.cpp  CompilerDetector.h  ConfigManager.cpp  ConfigManager.h  CrashHandler.cpp  CrashHandler.h  ErrorHandler.cpp  ErrorHandler.h  FileManager.cpp  FileManager.h  FileUtils.cpp  FileUtils.h  ImportRuleManager.cpp  ImportRuleManager.h  MarkdownRenderer.cpp  MarkdownRenderer.h  OperationHistory.cpp  OperationHistory.h  SessionManager.cpp  SessionManager.h  SyntaxChecker.cpp  SyntaxChecker.h
(+254 files in other folders)
